 * Fixed generation of the breadcrumb for the Image Editor (Kiwi)
 * Using ActiveSupport::JSON as encoder everywhere prevent to fail on Notification creation with events that have a very big payload

Wanted changes:
===============

 * creating of repositories on branching has changed if repositories of the
   source refer each other. This gets recreated in new project.

 * project copy is not adding the user anymore

 * service dispatcher is used by default now

 * The editing of a user's realname, email adress or password is no longer possible if LDAP mode is activated

 * Unused ldap options in options.yml were dropped:
   - ldap_update_support
   - ldap_object_class
   - ldap_entry_base
   - ldap_sn_attr_required

 * dropping of the project/package tag functionality/api

 * password hashing algorithm was changed to bcrypt (blowfish)

 * The backend notification plugin system is not used anymore.
   The RabbitMQ plugin is replaced with a RabbitMQ message bus implementation in the frontend, you can find details about this in the admin manual.
   The Hermes plugin is dropped without replacement as it was only used for notifications which the OBS is doing on it's own since quite some time.

Other changes
=============

 *

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start