@@ -90,6 +90,9 @@ Wanted changes:
    The RabbitMQ plugin is replaced with a RabbitMQ message bus implementation in the frontend, you can find details about this in the admin manual.
    The Hermes plugin is dropped without replacement as it was only used for notifications which the OBS is doing on it's own since quite some time.
 
+ * _multibuild files have a changed syntax, but OBS stays backward compatible.
+   Use <flavor> instead of <package> elements in future.
+
 Other changes
 =============
 
